--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 	<properties>
 		<java.version>11</java.version>
 	</properties>
-	<dependencies>
+	<dependencies>	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -26,6 +26,22 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+				
+		<dependency>
+			 <groupId>org.springframework.boot</groupId>
+			 <artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+			
+		<dependency>
+			 <groupId>com.h2database</groupId>
+			 <artifactId>h2</artifactId>
+			 <scope>runtime</scope>
+		</dependency>
+			
+		<dependency>
+			 <groupId>org.springframework.boot</groupId>
+			 <artifactId>spring-boot-devtools</artifactId>
 		</dependency>
 	</dependencies>
 
@@ -37,5 +53,8 @@
 			</plugin>
 		</plugins>
 	</build>
+
+
+
 
 </project>
